LPS-171272 Regen buildRest
