# modules/apps/object/object-admin-rest-impl/rest-openapi.yaml
@@ -540,6 +540,25 @@ info:
     version: v1.0
 openapi: 3.0.1
 paths:
+    "/object-actions/by-external-reference-code/{externalReferenceCode}":
+        get:
+            operationId: getObjectActionByExternalReferenceCode
+            parameters:
+                - in: path
+                  name: externalReferenceCode
+                  required: true
+                  schema:
+                      type: string
+            responses:
+                200:
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/ObjectAction"
+                        application/xml:
+                            schema:
+                                $ref: "#/components/schemas/ObjectAction"
+            tags: ["ObjectAction"]
     "/object-actions/{objectActionId}":
         delete:
             operationId: deleteObjectAction
