# modules/apps/object/object-admin-rest-impl/src/main/java/com/liferay/object/admin/rest/internal/resource/v1_0/ObjectActionResourceImpl.java
@@ -61,6 +61,15 @@ public class ObjectActionResourceImpl
 			_objectActionService.getObjectAction(objectActionId));
 	}
 
+	public ObjectAction getObjectActionByExternalReferenceCode(
+			String externalReferenceCode)
+		throws Exception {
+
+		return _toObjectAction(
+			_objectActionService.fetchObjectActionByExternalReferenceCode(
+				externalReferenceCode, contextCompany.getCompanyId()));
+	}
+
 	@Override
 	public Page<ObjectAction>
 			getObjectDefinitionByExternalReferenceCodeObjectActionsPage(
@@ -162,8 +171,8 @@ public class ObjectActionResourceImpl
 
 		return _toObjectAction(
 			_objectActionService.addObjectAction(
-				objectDefinitionId, objectAction.getActive(),
-				objectAction.getConditionExpression(),
+				objectAction.getExternalReferenceCode(), objectDefinitionId,
+				objectAction.getActive(), objectAction.getConditionExpression(),
 				objectAction.getDescription(),
 				LocalizedMapUtil.getLocalizedMap(
 					objectAction.getErrorMessage()),
@@ -190,8 +199,8 @@ public class ObjectActionResourceImpl
 
 		return _toObjectAction(
 			_objectActionService.updateObjectAction(
-				objectActionId, objectAction.getActive(),
-				objectAction.getConditionExpression(),
+				objectAction.getExternalReferenceCode(), objectActionId,
+				objectAction.getActive(), objectAction.getConditionExpression(),
 				objectAction.getDescription(),
 				LocalizedMapUtil.getLocalizedMap(
 					objectAction.getErrorMessage()),
@@ -201,6 +210,27 @@ public class ObjectActionResourceImpl
 				objectAction.getObjectActionTriggerKey(),
 				ObjectActionUtil.toParametersUnicodeProperties(
 					objectAction.getParameters())));
+	}
+
+	@Override
+	public ObjectAction putObjectDefinitionObjectActionByExternalReferenceCode(
+			String externalReferenceCode, Long objectDefinitionId,
+			ObjectAction objectAction)
+		throws Exception {
+
+		com.liferay.object.model.ObjectAction serviceBuilderObjectAction =
+			_objectActionService.fetchObjectActionByExternalReferenceCode(
+				externalReferenceCode, contextCompany.getCompanyId());
+
+		objectAction.setExternalReferenceCode(externalReferenceCode);
+
+		if (serviceBuilderObjectAction != null) {
+			return putObjectAction(
+				serviceBuilderObjectAction.getObjectActionId(), objectAction);
+		}
+
+		return postObjectDefinitionObjectAction(
+			objectDefinitionId, objectAction);
 	}
 
 	private ObjectAction _toObjectAction(
